# core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  engines.json
.github/workflows/: ci.yml  release.yml
shared/: _retry.py  cli.py  logging.py  manifest.py  pipeline.py  pyproject.toml  renderer.py  renderer_registry.py  schema.py
shared/discovery/: README.md  __init__.py  __main__.py  active.py  fingerprint.py  markdown.py  network.py  nmap_probe.py  passive.py  report.py  routers.py  scan.py
shared/discovery/adapters/: __init__.py  _stubs.py  base.py  opnsense.py  unmanaged.py
shared/renderers/: _opnsense_client.py  _proxmox_client.py  _state.py  _stub.py  ansible.py  ansible_only.py  bicep.py  chef.py  cloud_init.py  cloudformation.py  helm.py  nix.py  opentofu.py  packer.py  pulumi.py  puppet.py  salt.py  velocitee_native.py
shared/tests/: test_discovery_nmap.py  test_discovery_report.py
tools/: README.md  engines_schema.json  render_engine_status.py
tools/tests/: test_render_engine_status.py
vme/: .gitignore  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  vme-config.example.yml
vme/backends/: __init__.py  base.py  builtin.py  maas.py
vme/cli/: __init__.py  images.py  manifest.py  os_registry.py  preflight.py  setup.py  vme.py
vme/cli/tests/: test_backends.py  test_images.py  test_manifest.py  test_preflight.py
vme/docs/: getting-started.md
vme/manifests/: schema.json
vme/seed/dnsmasq/: dnsmasq.conf
vme/seed/ipxe/: Dockerfile  boot.ipxe  chain.ipxe
vme/seed/nginx/: nginx.conf
vme/targets/proxmox/: answer.toml
vme/targets/ubuntu/: meta-data  preseed.cfg
vne/: .gitignore  README.md  __init__.py  config.py  config_xml.py  deploy.py  join.py  pyproject.toml
vne/ansible/: requirements.yml
vne/ansible/playbooks/: configure-network.yml
vne/ansible/roles/opnsense-base/tasks/: main.yml
vne/ansible/roles/opnsense-dhcp/handlers/: main.yml
vne/ansible/roles/opnsense-dhcp/tasks/: main.yml
vne/ansible/roles/opnsense-dns/handlers/: main.yml
vne/ansible/roles/opnsense-dns/tasks/: main.yml
vne/ansible/roles/opnsense-firewall/handlers/: main.yml
vne/ansible/roles/opnsense-firewall/tasks/: main.yml
vne/ansible/roles/opnsense-vlans/handlers/: main.yml
vne/ansible/roles/opnsense-vlans/tasks/: main.yml
vne/schema/: vme-manifest.schema.json  vne-manifest.schema.json
vne/scripts/: deploy.sh  verify.py
vne/terraform/: README.md
vne/terraform/modules/opnsense-vm/: main.tf  outputs.tf
