[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "velocitee-shared"
version = "0.4.0"
description = "Shared utilities for velocitee engines"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "jsonschema>=4.0",
    "pydantic>=2.6,<3.0",
    "tenacity>=8.2",
    "structlog>=24.0",
]

[project.optional-dependencies]
discovery_opnsense = [
    # Used by the OPNsense router adapter to pull live state during a join.
    # Other discovery code paths are pure stdlib.
    "requests>=2.28",
]

[project.scripts]
velocitee-discover = "shared.discovery.__main__:main"

[tool.setuptools]
packages = ["shared", "shared.renderers", "shared.discovery", "shared.discovery.adapters"]
package-dir = {"shared" = "."}
include-package-data = true
