[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vne"
version = "0.1.0"
description = "Velocitee Network Configuration Engine"
requires-python = ">=3.11"
dependencies = [
    "velocitee-shared>=0.2.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "requests>=2.28",
    "pydantic>=2.6,<3.0",
    "passlib>=1.7.4",
]

[project.optional-dependencies]
opentofu_ansible = [
    # The OpenTofu CLI and ansible-playbook are runtime requirements; we
    # don't pip-install them. They're listed in the README. The Python
    # extras here are just for ansible_runner-friendly tooling.
    "ansible>=2.15,<2.17",
]

[project.scripts]
vne = "vne.deploy:main"

[tool.setuptools]
packages = ["vne", "vne.scripts"]
include-package-data = true

[tool.setuptools.package-data]
vne = [
    "schema/*.json",
    "ansible/playbooks/*.yml",
    "ansible/roles/**/*",
    "ansible/requirements.yml",
    "terraform/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]
